# LandLords

./: .gitignore  CONTRIBUTING.md  README.md  build_android_app.ps1  build_windows_app.ps1  build_windows_debug.ps1  check_landlords_ports.ps1  landlords.env  landlords.env.example  pubspec.yaml  run_backend_windows.ps1  run_backend_with_douzero.cmd  run_backend_with_douzero.ps1  run_backend_with_onnx.cmd  run_backend_with_onnx.ps1  run_frontend_web_23000.ps1  run_frontend_windows.ps1  run_strategy_benchmark.cmd
.home/: .gitconfig
.tmp_appdata/.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json
android/app/: build.gradle.kts
assets/fonts/: ui_chars.txt
backend/: README.md
backend/ai_models/: README.md
backend/ai_service/: README.md
backend/ai_service/douzero_onnx/: README.md  __init__.py  adapter.py  export_onnx.py  logging_utils.py  smoke_test.py  verify_onnx_export.py
backend/ai_service/douzero_proxy/: README.md  __init__.py  adapter.py  export_onnx.cmd  export_onnx.py  logging_utils.py  run_proxy.cmd  run_proxy.ps1  server.py
backend/server/: CMakeLists.txt  README.md
backend/server/build-vs-codex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  landlords_friend_center_tests.vcxproj  landlords_friend_center_tests.vcxproj.filters  landlords_onnx_decision_cli.vcxproj  landlords_onnx_decision_cli.vcxproj.filters  landlords_onnx_tests.vcxproj  landlords_onnx_tests.vcxproj.filters  landlords_room_lifecycle_tests.vcxproj  landlords_room_lifecycle_tests.vcxproj.filters  landlords_room_tests.vcxproj  landlords_room_tests.vcxproj.filters  landlords_server.sln  landlords_server.vcxproj  landlords_server.vcxproj.filters  landlords_strategy_benchmark.vcxproj  landlords_strategy_benchmark.vcxproj.filters
backend/server/build-vs-codex/landlords_friend_center_tests.dir/Debug/: landlords_friend_center_tests.exe.recipe
backend/server/build-vs-codex/landlords_friend_center_tests.dir/Debug/landlord.564C5EDF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog
backend/server/build-vs-codex/landlords_friend_center_tests.dir/Debug/landlord.E30991AB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  landlords_friend_center_tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/server/build-vs-codex/landlords_onnx_tests.dir/Debug/: landlords_onnx_tests.exe.recipe
backend/server/build-vs-codex/landlords_onnx_tests.dir/Debug/landlord.DAE01C91.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/server/build-vs-codex/landlords_room_lifecycle_tests.dir/Debug/: landlords_room_lifecycle_tests.exe.recipe
backend/server/build-vs-codex/landlords_room_lifecycle_tests.dir/Debug/landlord.03424EB0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/server/build-vs-codex/landlords_room_tests.dir/Debug/: landlords_room_tests.exe.recipe
backend/server/build-vs-codex/landlords_room_tests.dir/Debug/landlord.85B4BD63.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/server/build-vs-codex/landlords_server.dir/Debug/: landlords_server.exe.recipe
backend/server/build-vs-codex/landlords_server.dir/Debug/landlords_server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/server/build-vs-codex/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
backend/server/build-vs-codex/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/server/include/landlords/ai/: bot_strategy.h  onnx_bot_strategy.h
backend/server/include/landlords/core/: config.h  logging.h  models.h
backend/server/include/landlords/game/: bid_strategy.h  room.h
backend/server/include/landlords/network/: tcp_server.h
backend/server/include/landlords/persistence/: friend_request_repository.h  system_repository.h  user_repository.h
backend/server/include/landlords/services/: game_service.h
backend/server/src/: bid_strategy.cpp  bot_strategy.cpp  file_friend_request_repository.cpp  file_system_repository.cpp  file_user_repository.cpp  game_service.cpp  logging.cpp  main.cpp  models.cpp  onnx_bot_strategy.cpp  room.cpp  tcp_server.cpp
backend/server/tests/: friend_center_service_test.cpp  onnx_decision_cli.cpp  onnx_strategy_test.cpp  room_lifecycle_service_test.cpp  room_simulation_test.cpp  strategy_benchmark.cpp
docs/: README.md  ai_runtime.md  architecture.md  configuration.md  deployment.md  douzero_proxy.md  onnx_deployment.md  web_public_access.md
lib/: README.md  main.dart
lib/src/: app.dart
lib/src/models/: app_models.dart  game_models.dart
lib/src/pages/: game_page.dart  (+2 more)
reports/: strategy_benchmark.md
shared/: README.md
shared/proto/: README.md  landlords.proto
test/: README.md  app_controller_room_state_test.dart  app_room_flow_test.dart  controller_invitation_flow_test.dart  controller_invitation_room_switch_test.dart  current_trick_view_test.dart  dialog_interaction_test.dart  friend_center_refresh_test.dart  friend_online_status_test.dart  friend_request_flow_test.dart  invite_smoke_test.dart  runtime_friend_center_regression_test.dart  widget_test.dart
tool/: Load-LandlordsEnv.ps1  README.md  friend_request_smoke.dart  invite_smoke.dart  web_public_server.dart
tools/: protoc-gen-dart.bat
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  runtime_logger.cpp  runtime_logger.h  win32_window.cpp
(+39 files in other folders)
